# OpenCAEPoro-Optimization

./: README.md
OpenCAEPoro/: mpi-build-petsc.sh
OpenCAEPoro/data/test/: FastReview.out  SUMMARY.out  statistics.out
OpenCAEPoro/include/: PetscSolver.hpp
OpenCAEPoro/src/: IsoThermalMethod.cpp  PetscSolver.cpp
hypre-2.28.0/: build-hypre.sh
parmetis-4.0.3/: build-parmetis.sh
parmetis-4.0.3/metis/GKlib/: pqueue.c
petsc-3.19.3/: PKG-INFO  TAGS  build-petsc.sh
petsc-3.19.3/include/: petscversion.h
petsc-3.19.3/src/dm/f90-mod/ftn-auto-interfaces/: petscdm.h90  petscdmda.h90  petscdmnetwork.h90  petscdmplex.h90
petsc-3.19.3/src/ksp/f90-mod/ftn-auto-interfaces/: petscksp.h90  petscpc.h90
petsc-3.19.3/src/mat/f90-mod/ftn-auto-interfaces/: petscmat.h90
petsc-3.19.3/src/snes/f90-mod/ftn-auto-interfaces/: petscsnes.h90
petsc-3.19.3/src/sys/f90-mod/ftn-auto-interfaces/: petscsys.h90
petsc-3.19.3/src/tao/f90-mod/ftn-auto-interfaces/: petsctao.h90
petsc-3.19.3/src/ts/f90-mod/ftn-auto-interfaces/: petscts.h90
petsc-3.19.3/src/vec/f90-mod/ftn-auto-interfaces/: petscpetscsf.h90  petscvec.h90
petsc_solver/: CMakeLists.txt  _fim.cpp  _fim_p.cpp  build-petscsolver.sh  make.inc  make_ocp.sh  makefile
petsc_solver/include/: PETScBSolverPS.h  PETScSolver.h
petsc_solver/src/: PETSC_FIM_solver.cpp  PETScBSolverPS.cpp  decoup.cpp  preSolver.cpp  precond.cpp
petsc_solver/test/: PETScBSolverPS.h  a.out  main.cpp
